2003/01/22 niteria
- Fixed Bug 670414: syntax highlighting with verbatim env fails.
  A small problem concerning verbatim env still remains. This is mostly due to the
  old fashioned Syntaxhighlighting. Switching to a newer CrystalEdit will eliminate
  a lot of highlighting problems.

2003/01/15 niteria
- Added directory "TCHelp\SourceCodeDoc" with a doxygen configuration
  file. Run doxygen on "txc.doxy" or run "MakeSourceCodeDoc.cmd" (edit
  the path to your doxygen and HTML Help Workshop installations herein).
  You can find doxygen at www.doxygen.org and HTML Help Workshop at Microsoft.

2003/01/12 niteria
- Fixed Bug 666758: table* not shown in navigation bar
- Fixed Bug 574558: Figure* not recognised in navigation bar

2002/12/07 niteria
- Fixed Bug 646952: Cannot preview file while not compiled
- Implemented Feature 636662: Add link to dict download

2002/11/26 niteria
- Fixed Bug 597426: varrho inserts \rho instead of \varrho
- Fixed Bug 616808: Figures not centered correctly
- Fixed similar Bugs 607758 & 634320: Tools not working & Windows Explorer tool
- Fixed Bug 609909: TeXnicCenter may overwrite a .tex file
  This includes, that project files from versions till Beta3.00.000
  can not be opened anymore. If some users still have such files, they
  need to use Beta6.01 to convert the project-files. It is very unlikely,
  that such old things still exist.
- Fixed Bug 643907: List of Options|Clean not always updated
- UserTools have been enhanced:
  - Dialog supports new placeholder menus.
  - Started implementation of new features like in/out-redirection.
  - NOTE: This makes it incompatible to the old tools. The old ones
    have not been implemented using IMPLEMENT_SERIAL(). But the new ones
    need this. The new version is able to import the old tools, but an old
    version of TXC can not read them anymore after this.
    ==> BACKUP your registry, to be on the safe side. <==
- Removed old Placeholder menus. They are no longer needed.